11878
This was fixed by https://github.com/scala/scala/pull/4927:

{code}
$ ../scala/build/quick/bin/scalac BigTupleSpec.scala
BigTupleSpec.scala:7: error: too many elements for tuple: 23, allowed: 22
  type Big = (
             ^
BigTupleSpec.scala:17: error: too many elements for tuple: 23, allowed: 22
      val foo: Big = (
                     ^
two errors found
{code}
